# UpToCure

./: .gitignore  LICENSE  README.md  requirements.txt
UpToCure/: .gitignore  .pdm-python  README.md  pyproject.toml  requirements.txt  run.py
UpToCure/disease_requests/: README.md  requested_diseases.txt
UpToCure/frontend/: config.js  image-test.html  index.html  localization.js  methodology.html  reports-fallback.json  script.js  styles.css  test.html
UpToCure/frontend/js/: analytics.js  api.js  base.js  carousel.js  config.js  i18n.js  main.js  request.js  share.js
UpToCure/reports/: Advancements in Treating Spinal Muscular Atrophy T.md  Cystic Fibrosis.md  Fibrodysplasia Ossificans Progressiva.md  Hemophilia.md  Leukodystrophies.md  Mucopolysaccharidosis Type I (Hurler Syndrome).md  Myofasciitis à Macrophages.md  Progeria.md  Sickle Cell Disease.md  Spinal Muscular Atrophy.md  gd.md  huntingtons-disease.md  sample-report.md
UpToCure/reports/en/: Alkaptonuria.md  Alström Syndrome.md  Amyotrophic Lateral Sclerosis.md  Ataxia-Telangiectasia.md  Batten Disease.md  Canavan Disease.md  Cockayne Syndrome.md  Duchenne Muscular Dystrophy.md  Fabry Disease.md  Friedreich's Ataxia.md  Gaucher Disease.md  Hereditary Hemorrhagic Telangiectasia.md  Hyper IgM Syndrome.md  Hypophosphatasia.md  Inflammatory Myopathy with Abundant Macrophages.md  Joubert Syndrome.md  Kartagener Syndrome.md  Kleine-Levin Syndrome.md  Krabbe Disease.md  Leigh Syndrome.md  Lupus.md  Lysosomal Storage Diseases.md  Macrophagic Myofasciitis.md  Maple Syrup Urine Disease.md  Metachromatic Leukodystrophy.md  Multiple Sclerosis.md  Multiple System Atrophy.md  Neurofibromatosis Type 1.md  Niemann-Pick Disease.md  Pantothenate Kinase-Associated Neurodegeneration (PKAN).md  Phenylketonuria.md  Prader-Willi Syndrome.md  Primary Ciliary Dyskinesia.md  Progressive Supranuclear Palsy.md  Sandhoff Disease.md  Small Intestinal Bacterial Overgrowth.md  Spinal Muscular Atrophy.md  Wolfram Syndrome.md  X-Linked Agammaglobulinemia.md
UpToCure/reports/fr/: Alkaptonuria.md  Alström Syndrome.md  Amyotrophic Lateral Sclerosis.md  Ataxia-Telangiectasia.md  Batten Disease.md  Canavan Disease.md  Cockayne Syndrome.md  Cystic Fibrosis.md  Duchenne Muscular Dystrophy.md  Dyskinésie-ciliaire-primaire.md  Fabry Disease.md  Fibrodysplasia Ossificans Progressiva.md  Friedreich's Ataxia.md  Gaucher Disease.md  Hemophilia.md  Hereditary Hemorrhagic Telangiectasia.md  Hyper IgM Syndrome.md  Hypophosphatasia.md  Inflammatory Myopathy with Abundant Macrophages.md  Joubert Syndrome.md  Kartagener Syndrome.md  Kleine-Levin Syndrome.md  Krabbe Disease.md  Leigh Syndrome.md  Leukodystrophies.md  Lupus.md  Lysosomal Storage Diseases.md  Maple Syrup Urine Disease.md  Metachromatic Leukodystrophy.md  Mucopolysaccharidosis Type I (Hurler Syndrome).md  Multiple Sclerosis.md  Multiple System Atrophy.md  Myofasciite-à-macrophages.md  Myofasciitis à Macrophages.md  Neurofibromatosis Type 1.md  Niemann-Pick Disease.md  Pantothenate Kinase-Associated Neurodegeneration (PKAN).md  Paralysie-supranucléaire-progressive.md  Phenylketonuria.md  Prader-Willi Syndrome.md  (+10 more)
UpToCure/scripts/: run.py  smoke_test.sh
UpToCure/src/: __init__.py  app.py  i18n.py  parser.py  seo.py
UpToCure/templates/: 404.html  base.html  home.html  methodology.html  report.html  search.html
UpToCure/templates/partials/: footer.html  nav.html
UpToCure/tests/: conftest.py  test_app.py  test_parser.py  test_seo.py
backend/: .pdm-python  app.py  database.py  pyproject.toml  requirements.txt  uptocure.db
frontend/: index.html  list-reports.js  script.js  (+3 more)
reports_generator/: .env.example  .pdm-python  TRANSLATION.md  config.yaml  diseases.yaml  generate_and_translate.py  llm.py  pyproject.toml  reporter.py  translator.py
(+5 files in other folders)
