[project]
name = "uptocure"
version = "0.1.0"
description = "UpToCure - Medical research reports viewer"
authors = [
    {name = "Yannis Tevissen", email = "contact@yannistevissen.fr"},
]
dependencies = [
    "flask>=3.1.0",
    "markdown>=3.7",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
run = "python run.py"
run-backend = "python src/app.py"
