[project]
name = "uptocure"
version = "0.1.0"
description = "UpToCure - Medical research reports viewer"
authors = [
    {name = "Yannis Tevissen", email = "contact@yannistevissen.fr"},
]
dependencies = [
    "flask>=3.1.0",
    "markdown>=3.7",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "gunicorn>=20.1.0",
    "awscli>=1.38.2",
    # awsebcli is installed separately via pip
    "beautifulsoup4>=4.13.3",
    "pyyaml>=6.0.1"
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
run = "python run.py"
run-backend = "python src/app.py"
serve = "gunicorn --bind 0.0.0.0:8000 --workers 3 --access-logfile - 'src.app:app'"
generate-reports = "python reports_generator/generate_and_translate.py"
