[project]
name = "uptocure"
version = "2.0.0"
description = "UpToCure - Medical research reports viewer"
authors = [
    {name = "Yannis Tevissen", email = "contact@yannistevissen.fr"},
]
dependencies = [
    "flask>=3.1.0",
    "markdown>=3.7",
    "beautifulsoup4>=4.13.0",
    "pyyaml>=6.0.1",
    "gunicorn>=22.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "requests>=2.34.2",
    "ruff>=0.15.13",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
run = "python run.py"
serve = "gunicorn --bind 0.0.0.0:8000 --workers 3 --access-logfile - 'src.app:app'"
test = "pytest -v"
smoke = "bash scripts/smoke_test.sh"
lint = "ruff check ."

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
