[project]
name = "uptocure"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Yannis Tevissen", email = "contact@yannistevissen.fr"},
]
dependencies = [
    "uvicorn==0.15.0",
    "sqlalchemy==1.4.23",
    "python-dotenv==0.19.0",
    "fastapi<0.100.0",
    "pydantic<2.0.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
