[project]
name = "uptocure-reports-generator"
version = "2.0.0"
description = "UpToCure - Medical research reports generator and translator"
authors = [
    {name = "Yannis Tevissen", email = "contact@yannistevissen.fr"},
]
dependencies = [
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "requests>=2.32.0",
    # The deep-research agent. smolagents bundles DuckDuckGoSearch + VisitWebpage.
    "smolagents>=1.10.0",
    # Optional: keep available for users who still want the DeepL provider.
    "deepl>=1.22.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
report           = {call = "reporter:main",                env_file = ".env"}
translate        = {call = "translator:main",              env_file = ".env"}
generate-reports = {call = "generate_and_translate:main",  env_file = ".env"}
